--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,21 @@
 {
-	"name": "antoniogweb/php2xai-mnist",
-	"description": "MNIST classification exercise built on PHP2xAI.",
-	"type": "project",
-	"license": "GPL-3.0-only",
-	"require": {
-		"php": ">=8.1",
-		"antoniogweb/php2xai": "^0.1"
-	},
-	"minimum-stability": "stable",
-	"prefer-stable": true
+    "name": "antoniogweb/php2xai-mnist",
+    "description": "MNIST classification exercise built on PHP2xAI.",
+    "type": "project",
+    "license": "GPL-3.0-only",
+    "require": {
+        "php": ">=8.1",
+        "antoniogweb/php2xai": "dev-main as 0.1.0"
+    },
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../PHP2xAI",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
