--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "GPL-3.0-only",
     "require": {
         "php": ">=8.1",
-        "antoniogweb/php2xai": "dev-main as 0.1.0"
+        "antoniogweb/php2xai": "^0.1"
     },
     "minimum-stability": "stable",
     "prefer-stable": true
